Fix more layout bugs (#42)
* Minimum card width during book selection
* Allow for scrolling overflowed content during device setup (esp. important for landscape phone)
* Remove divider from credits and narrative pages
* Prevent Next Page button from overlapping content in some cases

--- a/src/layouts/book-page.module.css
+++ b/src/layouts/book-page.module.css
@@ -14,12 +14,10 @@
   bottom: 0;
 }
 
-.nextPage {
+.bottomCenterWithMargin {
   position: absolute;
   bottom: 0;
-  right: 0;
   margin-bottom: 1rem;
-  margin-right: 1rem;
 }
 
 .finishBook {
